--- a/recursos/estilos/publico/buscador.css
+++ b/recursos/estilos/publico/buscador.css
@@ -32,3 +32,51 @@
     background-size: 30px 30px;
     /* Ajusta el tamaño de la imagen según tus necesidades */
 }
+
+/* Estilos para el ícono de búsqueda y limpieza en el contenedor de búsqueda */
+.clear-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.search-container {
+    position: relative;
+    width: 100%;
+}
+
+.search-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    z-index: 1; /* Asegura que el ícono esté sobre el input */
+}
+
+#buscadorInputZapatos {
+    padding-right: 30px; /* Ajusta el espacio a la derecha del input para el ícono */
+}
+
+/* Estilos específicos para el ícono de limpieza */
+.clear-icon {
+    right: 10px;
+    /* Ajusta la posición del icono de limpiar según tus necesidades */
+    display: none;
+}
+
+#buscadorInputZapatos{
+    width: 100%;
+}
+
+.contendorFiltroHeader{
+    background-color: #F4F2F2;
+}
+
+.x-icon, .bi-x{
+    font-size: 25px; 
+    width: 100%;
+    height: 100%;
+    color: #0D4560;
+}
