Diseño parte de buscador de la parte publica de los zapatos

--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -26,6 +26,14 @@
     background-color: #A7A7A7;
 }
 
+.bg-color-01gray{
+    background-color: #F4F2F2;
+}
+
+.bg-color-0gray{
+    background-color: #E7E7E3;
+}
+
 .color-1blue {
     color: #1591CC;
 }
