--- a/recursos/estilos/publico/detalle_zapato.css
+++ b/recursos/estilos/publico/detalle_zapato.css
@@ -156,7 +156,7 @@
 }
 
 @media screen and (max-width: 1100px) {
-    #cardC {
+    .cardC {
         margin: 15px;
         margin-left: 25px;
         width: calc(80%/1);
@@ -178,7 +178,7 @@
 }
 
 @media screen and (min-width: 1101px) {
-    #cardC {
+    .cardC {
         margin: 15px;
         margin-left: 25px;
         width: calc(90%/3);
