--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -138,6 +138,18 @@
     text-decoration: none;
 }
 
+.text12 {
+    color: white;
+    font-size: 12px;
+    text-decoration: none;
+}
+
+.text8 {
+    color: white;
+    font-size: 8px;
+    text-decoration: none;
+}
+
 .text18 {
     color: white;
     font-size: 18px;
