--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -603,45 +603,55 @@ h4 {
     border-radius: 5px;
 }
 
-.contenedorFilaTallas {
-    border-radius: 5px;
-    min-width: 100%;
-    max-width: 100%;
-    min-height: min-content;
-    max-height: 150px;
-    overflow-y: auto;   
-    overflow-x: hidden;
+.ContedorTabla {
+    width: 80%;
+
 }
 
-.cuadradoTalla {
-    background-color: white;
-    border: 1px solid #5F5F5F;
-    border-radius: 5px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    margin: 10px;
-    width: 60px;
-    height: 60px;
-    transition: .3s ease-in-out;
+thead {
     color: black;
+    font-size: 14px;
+    table-layout: fixed;
+    border-collapse: collapse;
+    text-transform: uppercase;
+    background-color: #ccc;
 }
 
-.cuadradoTalla:hover {
-    transform: translateY(-5px);
-    transition-property: transform;
-    transition-duration: 0.5s;
-    transition-timing-function: ease;
-    transition-delay: 0s;
+table {
+    width: 80%;
+    margin-top: 15px;
+    margin-left: 60px;
+    border: 1px solid #ccc;
+    color: black;
+    table-layout: fixed;
+    border-collapse: collapse;
 }
 
-.contenedorTallas {
-    background-color: white;
+table tr{
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
 
 }
 
-.as {
-    background-color: white;
-    width: 200px;
-    height: 200px;
+table th, table td{
+    font-size: 14px;
+    padding: 8px;
+    text-align: center;
+}
+
+thead th {
+    color: black;
+    font-size: 14px;
+    table-layout: fixed;
+    border-collapse: collapse;
+    text-transform: uppercase;
+    background-color: #ccc;
+}
+
+table tbody tr :hover{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+table tbody td :hover{
+    background-color: rgba(0, 0, 0, 0.2);
 }
