--- a/recursos/estilos/publico/tuspedidos.css
+++ b/recursos/estilos/publico/tuspedidos.css
@@ -179,7 +179,7 @@
     grid-gap: 20px;
 }
 
-.container1, .star, a{
+.estrella{
     transition: .6s;
     color: #333;
     font-size: 45px;
@@ -187,8 +187,4 @@
 
 .container1, .star, a.active{
     color: #FFC700;
-}
-
-@media screen and (max-width: 332px) {
-    
 }
