--- a/recursos/estilos/publico/iniciosesion.css
+++ b/recursos/estilos/publico/iniciosesion.css
@@ -5,12 +5,16 @@ body{
     background-attachment: fixed; /* Fija la imagen de fondo al desplazarse */
 }
 
+.mainContent {
+    height: 100vh;
+}
+
 
 .ContenedorForm{
     background-color: white;
     border-radius: 20px;
     width: 35%;
-    height: 800px;
+    height: 750px;
 }
 
 
@@ -35,7 +39,46 @@ body{
 
 .contraseña, .correo{
     padding: 15px;
+}
 
+.ContenedorRegistro{
+    background-color: white;
+    border-radius: 20px;
+    width: 50%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 150px;
+    margin-top: 160px;
 }
 
 
+.texto{
+    width: 100%;
+    padding-left: 50px ;
+}
+
+.ContenedorImg{
+    padding-left: 50px ;
+    padding-bottom: 20px;
+    width: 100%;
+}
+
+.contenedorBotones{
+    width: 100%;
+    min-height: fit-content;
+    max-height: fit-content;
+    position: absolute;
+    bottom: -10%;
+}
+
+/* Estilos para contenedorBotones2 */
+.contenedorBotones{
+    bottom: 2%;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
